# CoroutineClasses

./: CMakeLists.txt  LICENSE  README.md  classes.puml
examples/: CMakeLists.txt  DerivedCoTask.cpp  SimpleCoGenerator.cpp  SimpleCoTask.cpp  SimpleCoTaskWithAwait.cpp  SimpleCoTaskWithReturn.cpp
include/: CoAwaiter.h  CoBasePromise.h  CoGenerator.h  CoTask.h  CoUtility.h  CoValueReturnPromise.h  CoVoidReturnPromise.h
